fix(responsiveness): hopefully fix navbar hiding visual components on ios safari

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -8,7 +8,8 @@
   }
 
   html, body {
-    height: 100%;
+    height: 100vh;
+    height: 100dvh;
     margin: 0;
     overflow: hidden;
   }
